[gd_scene load_steps=3 format=3 uid="uid://cyam2jvx8y4pf"]

[ext_resource type="Script" uid="uid://bm3xjrldx042d" path="res://scripts/victory_popup.gd" id="1_victory"]
[ext_resource type="FontFile" uid="uid://dlo5r8y4er47f" path="res://fonts/pixelmix.ttf" id="2_font"]

[node name="VictoryPopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_victory")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Mensagem de vitoria"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "Voltar ao Menu Principal"

[connection signal="pressed" from="Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
